--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ header {
   display: flex;
   justify-content: space-between;
   color: teal;
-  font-size: 14px;
+  font-size: 12px;
   margin-top: 10px;
 }
 
@@ -436,6 +436,10 @@ header {
   .service + .service {
     margin-left: 2em;
   }
+
+  .my-tools {
+  font-size: 16px;
+}
 }
 
 /****************about Me Section ********************/
